<?xml version="1.0"?>
<package>
  <name>ros_dcdc_usb</name>
  <version>0.1.0</version>
  <description>ROS Package to monitor the DCDC-USB power converter</description>

  <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>

  <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer>

  <license>LGPL3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
</package>
